--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -1,8 +1,9 @@
-= Books 
+= Books
 Rich Hickey
 2015-01-01
-:jbake-type: page
+:type: community
 :toc: macro
+:icons: font
 
 Please support these fine books about Clojure.
 
