--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -1,12 +1,12 @@
 = Community Resources
 Rich Hickey
 2015-01-01
-:jbake-type: page
+:type: community
 :toc: macro
+:icons: font
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
-== Community Resources 
 
 * http://groups.google.com/group/clojure[Clojure Google Group]
 
@@ -21,7 +21,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 * <<swag#,Clojure Swag>>
 * <<companies#,Companies Using Clojure>>
 
-=== Conferences 
+== Conferences
 
 * http://clojure-conj.org/[Clojure/conj]
 ** 2015 - Nov 16-18 in Philadelpha, PA
