--- a/content/search.adoc
+++ b/content/search.adoc
@@ -1,9 +1,9 @@
-= News 
-Alex Miller
-2015-11-25
-:jbake-type: news
+= Search Results
+Rich Hickey
+2015-01-01
+:type: search
 :toc: macro
+:icons: font
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
-
 
