--- a/content/about/features.adoc
+++ b/content/about/features.adoc
@@ -1,18 +1,17 @@
 = Features
 Rich Hickey
 2015-01-01
-:jbake-type: page
+:type: about
 :toc: macro
+:icons: font
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
-
-== Features
 
 Clojure has a set of useful features that together form a simple, coherent, and powerful tool. In Clojure you'll find ideas from Lisp, ML, Haskell, and others, but the end result is unique. This section is a brief, non-comprehensive tour of some of the features of Clojure. Consult the http://clojure.org/documentation[reference] for more details.
 
 * <<dynamic#,Dynamic Development>>
 * <<functional_programming#,Functional Programming>>
 * <<lisp#,Lisp>>
-* <<runtime_polymorphism#,Runtime Polymorphism>> 
+* <<runtime_polymorphism#,Runtime Polymorphism>>
 * <<concurrent_programming#,Concurrent Programming>>
 * <<jvm_hosted#,Hosted on the JVM>>
