--- a/content/about/jvm_hosted.adoc
+++ b/content/about/jvm_hosted.adoc
@@ -1,12 +1,17 @@
-= JVM Hosted
+= Hosted on the JVM
 Rich Hickey
 2015-01-01
-:jbake-type: page
+:type: about
 :toc: macro
+:icons: font
+:navlinktext: JVM Hosted
+:prevpagehref: concurrent_programming
+:prevpagetitle: Concurrent Programming
+:nextpagehref: clojurescript
+:nextpagetitle: ClojureScript
+
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
-
-== Hosted on the JVM 
 
 Clojure is designed to be a hosted language, sharing the JVM type system, GC, threads etc. It compiles all functions to JVM bytecode. Clojure is a great Java library consumer, offering the dot-target-member notation for calls to Java. Class names can be referenced in full, or as non-qualified names after being imported. Clojure supports the dynamic implementation of Java interfaces and classes using http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/reify[reify] and http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/proxy[proxy]:
 
