--- a/content/community/contributors.adoc
+++ b/content/community/contributors.adoc
@@ -1,8 +1,9 @@
 = Contributors
 Rich Hickey
 2015-11-12
-:jbake-type: page
+:type: community
 :toc: macro
+:icons: font
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
