--- a/content/community/swag.adoc
+++ b/content/community/swag.adoc
@@ -1,16 +1,17 @@
 = Swag
 Rich Hickey
 2015-01-01
-:jbake-type: page
+:type: community
 :toc: macro
+:icons: font
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
-== Official Clojure gear
+== Official Clojure Gear
 
 The http://www.zazzle.com/clojureappreciation[Clojure Appreciation store] is the only place to get authorized gear. Proceeds go to the Clojure creator.
 
-== Stickers 
+== Stickers
 
 <<media type="custom" key="20484128"#,media type="custom" key="20484128">><<media type="custom" key="20484158"#,media type="custom" key="20484158">>
 
